--- a/frontend/final/package.json
+++ b/frontend/final/package.json
@@ -16,7 +16,7 @@
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
