--- a/frontend/start/package.json
+++ b/frontend/start/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
     "eslint-config-next": "^15.0.0-rc.0",
-    "next": "^15.0.0-rc.0",
+    "next": "^15.4.2-canary.19",
     "query-string": "^9.1.0",
     "react": "^19.0.0-rc-1eaccd82-20240816",
     "react-dom": "^19.0.0-rc-1eaccd82-20240816",
